# xontrib-shadowenv

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/: issue_template.md
.github/workflows/: test.yml
tests/: test_xontrib.py
xontrib/: shadowenv.xsh
