
[project]
name = "xontrib-shadowenv"
version = "0.0.1"
license = { file = "LICENSE" }
description = "An Xonsh integration for shadowenv"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: System :: Shells",
    "Topic :: System :: System Shells",
    "Topic :: Terminals",
]
requires-python = ">=3.8"
dependencies = ["xonsh"]
authors = [{ name = "Zak Scholl", email = "results_tinkers.0n@icloud.com" }]
[project.readme]
file = "README.md"
content-type = "text/markdown"


[project.urls]

Homepage = "https://github.com/zscholl/xontrib-shadowenv"
Documentation = "https://github.com/zscholl/xontrib-shadowenv/blob/master/README.md"
Code = "https://github.com/zscholl/xontrib-shadowenv"
"Issue tracker" = "https://github.com/zscholl/xontrib-shadowenv/issues"


[project.optional-dependencies]
dev = ["pytest>=7.0", "black"]


[build-system]
requires = [
    "setuptools>=62",
    "wheel",          # for bdist package distribution
]
build-backend = "setuptools.build_meta"
[tool.setuptools]

packages = ["xontrib"]
package-dir = { xontrib = "xontrib" }

platforms = ["any"]
include-package-data = false
[tool.setuptools.package-data]

xontrib = ["*.xsh"]


[tool.isort]
profile = "black"

[tool.black]
include = '\.pyi?$'
force-exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.pytest_cache
  | \.tox
  | \.vscode
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | disk-cache.sqlite3
)/
'''
